machine/computer split

--- a/Resources/Prototypes/Recipes/Lathes/categories.yml
+++ b/Resources/Prototypes/Recipes/Lathes/categories.yml
@@ -104,6 +104,14 @@
   id: Tiles
   name: lathe-category-tiles
 
+- type: latheCategory
+  id: Computers
+  name: lathe-category-computers
+
+- type: latheCategory
+  id: Machines
+  name: lathe-category-machines
+
 # Cutter machine
 
 - type: latheCategory
